--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@zoomus/websdk": "^1.8.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.3",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "jwt-decode": "^2.2.0",
+    "jquery": "^3.4.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1100.4",
@@ -43,6 +45,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "^4.0.5"
+    "typescript": "4.0.5"
   }
 }
